배경색, 액션바 삭제, 이미지 변경, 벼튼 색변경

--- a/app/src/main/res/layout/activity_mainlist.xml
+++ b/app/src/main/res/layout/activity_mainlist.xml
@@ -102,6 +102,7 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="등록"
+            android:backgroundTint="@color/mainColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
