--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -66,6 +66,7 @@
                 android:layout_width="130dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="50dp"
+                android:backgroundTint="@color/mainColor"
                 android:text="수정" />
 
 
@@ -73,6 +74,7 @@
                 android:id="@+id/back_btn"
                 android:layout_width="130dp"
                 android:layout_height="match_parent"
+                android:backgroundTint="@color/mainColor"
                 android:layout_marginLeft="50dp"
                 android:text="뒤로" />
 
