--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -45,7 +45,7 @@
                     android:id="@+id/icon"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/splash" />
+                    android:src="@drawable/splash3" />
 
                 <TextView
                     android:id="@+id/text"
