--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="SplashTheme" parent="@android:style/Theme.Light.NoTitleBar">
-    <item name="android:windowBackground">@drawable/splash</item>item>
+        <item name="android:windowBackground">@drawable/splash3</item>item>
     </style>
 </resources>
