--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A9FFE7"
+    android:background="@color/mainBack"
     tools:context=".RegisterActivity">
 
     <EditText
@@ -81,6 +81,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="회원가입"
+        android:backgroundTint="@color/mainColor"
         app:layout_constraintEnd_toEndOf="@+id/et_age"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/et_age"
