--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/mainBack"
     >
 
 <!--    메인 화면. -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ByBuySchool"
+        android:textColor="#330c00"
+        android:layout_gravity="center"
+        android:paddingTop="75dp"
+        android:paddingBottom="70dp"
+        android:textSize="60dp"/>
+
+
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="539dp"
-        android:background="@drawable/splash" />
+        android:layout_width="500dp"
+        android:layout_gravity="center"
+        android:layout_height="350dp"
+        android:background="@drawable/splash3" />
 
 </LinearLayout>
