--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -40,13 +40,29 @@
             android:textSize="20dp"
             android:layout_marginLeft="10dp"/>
 
-        <TextView
-            android:id="@+id/pay"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:text="* 가격 : "
-            android:textSize="20dp"
-            android:layout_marginLeft="10dp"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/pay"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="* 가격 : "
+                android:textSize="20dp"
+                android:layout_marginLeft="10dp"/>
+
+            <EditText
+                android:id="@+id/priceText_post"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="20dp"
+                android:inputType="number"
+                android:text=""/>
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/introduction"
