--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -24,21 +24,41 @@
             android:layout_marginBottom="20dp"
             android:background="#A9A9A9" />
 
-        <TextView
-            android:id="@+id/title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:text="* 책이름 : "
-            android:textSize="20dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_height="40dp"
+            android:layout_margin="10dp">
 
-        <TextView
-            android:id="@+id/author"
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="* 책이름"
+                android:textSize="20dp"/>
+            <TextView
+                android:id="@+id/bookText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:text="* 저자 : "
-            android:textSize="20dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_height="40dp"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/author"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="* 저자"
+                android:textSize="20dp"/>
+            <TextView
+                android:id="@+id/authorText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,14 +83,23 @@
 
         </LinearLayout>
 
-
-        <TextView
-            android:id="@+id/introduction"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text="* 소개글 : "
-            android:textSize="20dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_height="40dp"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/introduction"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="* 소개글"
+                android:textSize="20dp"/>
+            <TextView
+                android:id="@+id/introductionText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
