--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -43,45 +43,39 @@
 
                 <ImageView
                     android:id="@+id/icon"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="70dp"
+                    android:layout_height="71dp"
                     android:src="@drawable/splash3" />
 
                 <TextView
-                    android:id="@+id/pprice"
+                    android:id="@+id/textView2"
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="가격 :"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/price"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/ccontent"
+                    android:id="@+id/textView4"
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="저자 : "
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="TextView" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.5"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/text"
-                        android:layout_width="match_parent"
-                        android:layout_height="250dp"
-                        android:gravity="center"
-                        android:text="테스트" />
-
-                    <TextView
-                        android:id="@+id/price"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="테스트" />
-
-                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
