--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,8 @@
         app:layout_constraintStart_toStartOf="@+id/et_id"
         app:layout_constraintTop_toBottomOf="@+id/et_id" />
 
-    <EditText
+    <Spinner
+        android:entries="@array/my_array1"
         android:id="@+id/et_name"
         android:layout_width="350dp"
         android:layout_height="50dp"
@@ -54,6 +55,8 @@
         app:layout_constraintEnd_toEndOf="@+id/et_pass"
         app:layout_constraintStart_toStartOf="@+id/et_pass"
         app:layout_constraintTop_toBottomOf="@+id/et_pass" />
+
+
 
     <EditText
         android:id="@+id/et_nickname"
