--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -122,13 +122,13 @@
             android:layout_weight="1">
 
             <EditText
+                android:id="@+id/priceText"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:ems="10"
                 android:hint="가격을 설정해주세요"
-                android:inputType="number"
-                android:id="@+id/priceText"></EditText>
+                android:inputType="number"></EditText>
 
         </LinearLayout>
 
@@ -139,6 +139,14 @@
         android:layout_height="0dp"
         android:layout_margin="10dp"
         android:layout_weight="2">
+
+<!--        <EditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="right"-->
+<!--            android:ems="10"-->
+<!--            android:hint="가격을 설정해주세요"-->
+<!--            android:id="@+id/memo"></EditText>-->
 
         <EditText
             android:layout_width="match_parent"
