--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,16 +9,21 @@
     >
 
 <!--    메인 화면. -->
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="202dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
         app:srcCompat="@drawable/main12" />
 
     <ImageView
         android:layout_width="342dp"
-        android:layout_height="310dp"
+        android:layout_height="267dp"
         android:layout_gravity="center"
+        android:layout_marginTop="50dp"
         android:background="@drawable/splash3" />
 
 
