--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -6,6 +6,7 @@
 
 <!--    listView의 각 항목을 위한 레이아웃 리소스 정의-->
     <LinearLayout
+        android:id="@+id/cmdArea"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -13,6 +14,7 @@
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="25dp"
@@ -20,12 +22,13 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:paddingLeft="0dp">
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:text="test"
-                android:textSize="15dp"/>
+                android:textSize="15dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -36,7 +39,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/cmdArea"
+                android:id="@+id/cmdAreass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5">
