210619 01:08 update.java 의 수정, 삭제시 리스너 작성

--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -8,8 +8,8 @@
     android:padding="10dp"
     tools:context=".Update"
     >
-<!--현재 안쓰이고 있는 xml 입니다!! 그치만 삭제하지 말아주세요 ㅠㅠ
-새별 이가.. -->
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -129,7 +129,8 @@
                 android:layout_gravity="right"
                 android:ems="10"
                 android:hint="가격을 설정해주세요"
-                android:id="@+id/priceText"></EditText>
+                android:id="@+id/priceText"
+                android:inputType="number"></EditText>
 
         </LinearLayout>
 
